[package]
name = "solana-cli-wallet-neutron"
version = "0.1.0"
edition = "2021"

[dependencies]
hdpath = "0.6.3"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
bip39 = "2.0.0"
web3 = "0.19.0"
rand = "0.8.5"
eth-keystore = "0.5.0"
aes-gcm = "0.10.3"
hex = "0.4.3"
uuid = "1.10.0"
clearscreen = "3.0.0"
spinoff = "0.8.0"
colored = "2.1.0"
anyhow = "1.0.86"
tui = "0.19.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "2.0.3"
spl-token-2022 = "4.0.0"
bs58 = "0.5.1"
termion = "4.0.2"
